# vista-sdk

./: .gitignore  .justfile  README.md
.github/skills/bump-version/: SKILL.md  bump-version.sh
.github/workflows/: build-and-test.yml  build-csharp.yml  build-js.yml  build-python.yml  js-build-and-publish.yml  js-build-publish.yml
csharp/: .gitignore  Build.csproj  Directory.Build.props  README.md  Vista.SDK.sln
csharp/.config/: dotnet-tools.json
csharp/samples/: README.md
csharp/src/: Directory.Build.props
csharp_new/: Vista.SDK.sln
js/: .gitignore  .npmignore  .prettierrc.json  README.md  jest.config.js  package-lock.json  package.json
js/lib/: Client.ts  Codebooks.ts  Gmod.ts  GmodNode.ts  GmodPath.ts  ILocalId.ts  ILocalIdBuilder.ts  ImoNumber.ts  LocalId.Builder.ts  LocalIdQuery.ts  Location.ts  LocationBuilder.ts  MetadataTagsQuery.ts  UniversalId.Parsing.ts  UniversalId.ts  VIS.ts  VisVersion.ts  index.ts
js/samples/: AdvancedLocalIds.ts  BasicUsage.ts  CodebooksExample.ts  GmodOperations.ts  GmodSubset.ts  Iso19848Json.ts  LocalIdQuery.ts  README.md  SensorDataFlow.ts  tsconfig.json
js/tests/: Codebook.test.ts  Gmod.test.ts  GmodPath.test.ts  GmodVersioning.test.ts  ISOString.test.ts  Immutability.test.ts  LocalId.test.ts  LocalIdQuery.test.ts  Location.test.ts  Pmod.test.ts  UniversalId.test.ts  VIS.test.ts
python/: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  README.md  benchmark.json  benchmark.sh  benchmark.toml  definitions.py  dependencies.txt  generate_dtos.py  main.py  manual_verification.py  pyproject.toml  run_benchmarks.py  setup.py
python/appcity/: dependencies.txt
python/docs/: API.md  README.md  getting-started.md  tutorials.md
python/samples/: README.md  advanced_local_ids.py  basic_usage.py  codebooks_example.py  gmod_operations.py  gmod_subset.py  iso19848_json.py  local_id_query.py  sensor_data_flow.py
python/src/: Client.py  Gmod.py  GmodDto.py  GmodNode.py  GmodPath.py  GmodVersioning.py  LocationBuilder.py  Locations.py  ParsingErrors.py  VIS.py  VisVersions.py
python/src/SourceGenerator/: EmbeddedResources.py  VisVersionsGenerator.py
python/src/internal/: ChdDictionary.py  LocationParsingErrorBuilder.py
python/src/vista_sdk/: Client.py  Gmod.py  GmodPath.py  Locations.py  VisVersions.py  __init__.py  bindings.py  client.py  codebook.py  codebook_dto.py  codebook_names.py  codebooks.py  gmod.py  gmod_dto.py  gmod_node.py  gmod_path.py  gmod_path_query.py  gmod_versioning.py  gmod_versioning_dto.py  imo_number.py  local_id.py  local_id_builder.py  local_id_builder_parsing.py  local_id_items.py  local_id_query.py  local_id_query_builder.py  location_builder.py  locations.py  locations_dto.py  locations_sets_visitor.py  metadata_tag.py  metadata_tag_query.py  parsing_errors.py  result.py  traversal_handler_result.py  universal_id.py  universal_id_builder.py  universal_id_builder_parser.py  vis.py  vis_version.py  (+1 more)
python/src/vista_sdk/SourceGenerator/: VisVersionsGenerator.py
python/src/vista_sdk/internal/: __init__.py  chd_dictionary.py  dictionary.py  local_id_parsing_error_builder.py  local_id_parsing_state.py  location_parsing_error_builder.py  natural_sort.py
python/src/vista_sdk/mqtt/: __init__.py  mqtt_local_id.py
python/src/vista_sdk/source_generator/: __init__.py  embedded_resources.py  vis_versions_generator.py
python/src/vista_sdk/system_text_json/: __init__.py  common.py  extensions.py  serializer.py
python/src/vista_sdk/system_text_json/data_channel_list/: __init__.py  data_channel_list.py  extensions.py
python/src/vista_sdk/system_text_json/tests/: test_json.py
python/src/vista_sdk/system_text_json/time_series_data/: __init__.py  extensions.py  time_series_data.py
python/src/vista_sdk/transport/: __init__.py  iso19848.py  iso19848_dtos.py  ship_id.py  value.py
python/src/vista_sdk/transport/data_channel/: __init__.py  data_channel.py
python/src/vista_sdk/transport/time_series_data/: __init__.py  data_channel_id.py  time_series_data.py
python/tests/: conftest.py  test_client.py  test_codebook.py  test_codebooks.py  test_gmod.py  test_gmod_path.py  test_gmod_path_query.py  test_gmod_versioning.py  test_gmodpath.py  test_imo_number.py  test_iso_string.py  test_local_id.py  test_local_id_query.py  test_locations.py  test_path_conversion.py  test_universal_id.py  test_vis.py  test_vis_versions.py  testdata.py  vista_sdk_testdata.py
python/tests/benchmark/: README.md  __init__.py  benchmark_base.py  conftest.py  test_benchmarks.py  test_codebooks_lookup.py  test_concurrent.py  test_data_channel_list.py  test_gmod_load.py  test_gmod_lookup.py  test_gmod_path_parse.py  test_gmod_traversal.py  test_gmod_versioning.py  test_iso19848.py  test_load.py  test_local_id_parse.py  test_performance.py  test_short_string_hash.py  testdata_generator.py  track_benchmarks.py
python/tests/integration/: __init__.py  test_concurrent.py
python/tests/profiling/: __init__.py  test_memory_profiling.py
python/tests/transport/: test_json.py  test_transport_data_channel.py  test_transport_iso19848.py  test_transport_time_series_data.py  test_transport_value.py
python/tests/transport/json/: DataChannelList.json  TimeSeriesData.json
python/vista_sdk/: Client.py
python/vista_sdk/SourceGenerator/: EmbeddedResources.py  VisVersionsGenerator.py
rust/: .editorconfig  Cargo.toml  uniffi.toml
rust/bindgen/: Cargo.toml  build.rs
rust/bindgen/src/: bindings.udl  gmod.rs  gmod_node.rs  lib.rs  vis.rs  vis_version.rs
rust/bindgen/src/internal/: common.rs
rust/sdk/: Cargo.toml  build.rs  vis.g.rs.liquid
rust/sdk/benches/: README.md  benchmarks.rs
rust/sdk/src/: gmod.rs  lib.rs  vis.rs
rust/sdk/src/internal/: immutable.rs  mod.rs
rust/sdk_resources/: Cargo.toml
rust/sdk_resources/src/: asset.rs  gmod.rs  lib.rs  result.rs
schemas/json/: DataChannelList.sample.compact.json  DataChannelList.sample.json  DataChannelList.schema.json  TimeSeriesData.schema.json
testdata/: GmodPaths.json  ImoNumbers.json  IndividualizableSets.json  Locations.json
(+154 files in other folders)
