[package]
name = "bindgen"
version = "0.1.0"
edition = "2021"


[dependencies]
vista_sdk = { path = "../sdk" }
moka = { workspace = true }
once_cell = { workspace = true }
uniffi = { workspace = true }
thiserror = "1.0"

[build-dependencies]
vista_sdk = { path = "../sdk" }
uniffi = { workspace = true, features = ["build"] }


[lib]
crate-type = ["cdylib"]
name = "bindings"
