[package]
name = "vista_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
sdk_resources = { path = "../sdk_resources" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
liquid = "0.26.0"

[dependencies]
moka = "0.8"
once_cell = "1.10"
sdk_resources = { path = "../sdk_resources" }
