[package]
name = "vista_sdk"
version = "0.1.0"
edition = "2021"

[build-dependencies]
sdk_resources = { path = "../sdk_resources" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
liquid = "0.26.0"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.9", features = ["flamegraph", "criterion", "protobuf-codec"] }

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
moka = "0.8"
once_cell = "1.10"
sdk_resources = { path = "../sdk_resources" }
